Edited headshot and about me section

--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 /* Global styles */
 body {
   color: #524f4f;
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Josefin Sans', sans-serif;
   line-height: 1.5;
 }
 
